# stock-data-etl-pipeline

./: .pre-commit-config.yaml  Makefile  README.md  config.yamllint.yaml  docker-compose.yml
services/: .python-version  Dockerfile  Dockerfile.prod  pyproject.toml
services/api/: apps.py  cache_utils.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
services/api/migrations/: 0001_initial.py  0002_bulkqueuerun_stockingestionrun_bulk_queue_run.py  0003_exchange_alter_stock_exchange.py  0004_sector_alter_stock_sector.py
services/api/services/: __init__.py  stock_ingestion_service.py
services/api/tests/: __init__.py  auth.py  cache_invalidation.py  filters.py  models.py  services.py  views.py
services/api/views/: __init__.py  bulk_queue_runs.py  ingestion_runs.py  list_views.py  paginator.py  stocks.py
services/components/: auth_base.html  base.html
services/config/: __init__.py  adapters.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
services/frontend/: urls.py  views.py
services/scripts/: entrypoint.api.sh  entrypoint.sh  entrypoint.worker.delta.sh  entrypoint.worker.dev.sh  entrypoint.worker.discord.sh  entrypoint.worker.fetch.sh  entrypoint.worker.sh  wait_for_db.sh  wait_for_dependencies.sh
services/src/css/: custom.css
services/workers/: exceptions.py  tests.py  urls.py  views.py
services/workers/tasks/: __init__.py  base.py  queue_all_stocks_for_fetch.py  queue_for_delta.py  queue_for_fetch.py  send_discord_notification.py  update_stock_metadata.py
services/workers/tests/: __init__.py  (+5 more)
(+59 files in other folders)
